@@ -1,3 +1,8 @@
+Fri Apr  7 12:25:20 BST 2006 (njh)
+----------------------------------
+  * libclamav/mbox.c:		Better handling of messages with lots of
+  					consecutive blank lines
+
 Fri Apr  7 11:13:29 BST 2006 (trog)
 -----------------------------------
   * libclamav/unrar/unrar.c: Fix error path error leaks.
